--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ logging.level.com.example.cqrs=INFO
 spring.application.name=ProjectionNaive
 
 cqrs.loader.ids-per-thread=1000
-cqrs.loader.events-per-thread=125000
+cqrs.loader.events-per-thread=12500
 cqrs.loader.thread-count=8
 
-cqrs.projection.limit=1000000
+spring.data.mongodb.uri=mongodb://localhost/axon
+axon.axonserver.servers=localhost:8124
