--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 axon.serializer.messages=jackson
 logging.level.com.example.cqrs=INFO
-spring.application.name=ProjectionNaive
-
-cqrs.loader.ids-per-thread=1000
-cqrs.loader.events-per-thread=12500
-cqrs.loader.thread-count=8
+spring.application.name=projection-benchmark
 
 spring.data.mongodb.uri=mongodb://localhost/axon
 axon.axonserver.servers=localhost:8124
+
+loader.ids-per-thread=5000
+loader.events-per-thread=125000
+loader.thread-count=16
+
