--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.example.cqrs</groupId>
     <artifactId>projection-benchmark</artifactId>
     <version>1.0</version>
-    <name>projection-naive</name>
+    <name>projection-benchmark</name>
     <description>Tests of projection throughput (AxonServer to MongoDB) with various configurations.</description>
 
     <properties>
@@ -20,7 +20,6 @@
         <axon.version>4.0.3</axon.version>
         <axon-mongo.version>4.0</axon-mongo.version>
         <kotlin-logging.version>1.6.22</kotlin-logging.version>
-        <metrics.version>4.0.3</metrics.version>
     </properties>
 
     <dependencies>
@@ -31,7 +30,6 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>${metrics.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
